# 2dgamenegine

./: #.dir-locals.el#  .dir-locals.el  .dir-locals.el~  CMakeLists.txt  remake.sh  run.sh  tests.sh
.cache/clangd/index/: Component.h.3EA37EC8B3FEEE59.idx  Constants.h.00ADE960A5B6F4CC.idx  Entity.cpp.18A45DF59D5A660C.idx  Entity.h.43FEC759A087246E.idx  EntityManager.cpp.889785834E4C4605.idx  EntityManager.h.6095B9FE9E211153.idx  Game.cpp.1200613D14D69ED9.idx  Game.h.A03F7A166CCE5C75.idx  Main.cpp.3B415FA91075945F.idx  TransformComponent.h.7BC53C15984F9B1E.idx  _fixes.hpp.AACDCD109C9FEBFB.idx  _vectorize.hpp.0A59A818B6103C58.idx  common.hpp.2B523E82525B12B8.idx  compute_common.hpp.9BE68ED5CAEF7F9B.idx  compute_vector_relational.hpp.8CD95068095A539D.idx  exponential.hpp.C0A85CDE10A38FA9.idx  func_common.inl.F18633787B64A17A.idx  func_exponential.inl.E5B1886905BD03F9.idx  func_geometric.inl.0EAAE069486C3661.idx  func_integer.inl.C5EBA17002B1D8F0.idx  func_matrix.inl.D840F10BB89CBFBB.idx  func_packing.inl.52D6990676B0DFD8.idx  func_trigonometric.inl.A1BBA4F4FF8D4988.idx  func_vector_relational.inl.8C3473D385436E14.idx  fwd.hpp.A455E71BEB0C00DD.idx  gameTest.cpp.7A973E7CDCCE05AE.idx  geometric.hpp.AE7647DF6602AEA0.idx  glm.hpp.0E966424C16EFA83.idx  gmock-actions.h.B2C279C2188F6433.idx  (+169 more)
.emacs.d/: .lsp-session-v1  Emacs.org  init.el  projectile-bookmarks.eld
src/: #Entity.cpp#  CMakeLists.txt  Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Main.cpp
src/Components/: TransformComponent.h
tst/: CMakeLists.txt  gameTest.cpp
(+77 files in other folders)
